--- a/index.html
+++ b/index.html
@@ -43,29 +43,29 @@
           <div class="whatincludes__left">
             <ul class="whatincludes__list">
               <li class="whatincludes__item">
-                <img src="/img/gen.png" alt="gen" />
+                <img src="./img/gen.png" alt="gen" />
                 <p>Генетическое исследование</p>
               </li>
               <li class="whatincludes__item">
-                <img src="/img/note.png" alt="note" />
+                <img src="./img/note.png" alt="note" />
                 <p>Подробное заключение</p>
               </li>
               <li class="whatincludes__item">
-                <img src="/img/guy.png" alt="guy" />
+                <img src="./img/guy.png" alt="guy" />
                 <p>Дистанционная консультация врача-диетолога</p>
               </li>
               <li class="whatincludes__item">
-                <img src="/img/bread.png" alt="guy" />
+                <img src="./img/bread.png" alt="guy" />
                 <p>Индивидуальные рекомендации по питанию</p>
               </li>
               <li class="whatincludes__item">
-                <img src="/img/micro.png" alt="guy" />
+                <img src="./img/micro.png" alt="guy" />
                 <p>Назначение дополнительных обследований и консультаций</p>
               </li>
             </ul>
           </div>
           <div class="whatincludes__right">
-            <img src="/img/heart-plus.png" alt="heart-plus" />
+            <img src="./img/heart-plus.png" alt="heart-plus" />
           </div>
         </div>
       </div>
@@ -124,19 +124,43 @@
         <h2 class="form__title">Купить программу</h2>
         <div class="form__box">
           <label class="label" for="name">Имя:</label>
-          <input class="input" name="name" id="name" placeholder="Введите свое имя" type="text">
+          <input
+            class="input"
+            name="name"
+            id="name"
+            placeholder="Введите свое имя"
+            type="text"
+          />
         </div>
         <div class="form__box">
           <label class="label" for="surname">Фамилия:</label>
-          <input class="input" name="surname" id="surname" placeholder="Введите свою фамилию" type="text">
+          <input
+            class="input"
+            name="surname"
+            id="surname"
+            placeholder="Введите свою фамилию"
+            type="text"
+          />
         </div>
         <div class="form__box">
           <label class="label" for="surname">Дата рождения:</label>
-          <input class="input" name="surname" id="surname" placeholder="__ . __ . ____ г." type="text">
+          <input
+            class="input"
+            name="surname"
+            id="surname"
+            placeholder="__ . __ . ____ г."
+            type="text"
+          />
         </div>
         <div class="form__box">
           <label class="label" for="surname">Телефон:</label>
-          <input class="input" name="surname" id="surname" placeholder="+7 ( ___ ) - ___ - __ - __" type="text">
+          <input
+            class="input"
+            name="surname"
+            id="surname"
+            placeholder="+7 ( ___ ) - ___ - __ - __"
+            type="text"
+          />
         </div>
         <div class="form__box">
           <label class="label" for="surname">Стоимость:</label>
@@ -144,13 +168,15 @@
         </div>
         <div class="form__box form__box_green">
           <label class="label" for="surname"></label>
-          <input class="checkbox" type="checkbox">
+          <input class="checkbox" type="checkbox" />
           <span class="privacy-check">С условиями оферты ознакомлен</span>
         </div>
         <div class="form__box form__box_green">
           <label class="label" for="surname"></label>
-          <input class="checkbox" type="checkbox">
-          <span class="privacy-check">Согласен на обработку персональных данных</span>
+          <input class="checkbox" type="checkbox" />
+          <span class="privacy-check"
+            >Согласен на обработку персональных данных</span
+          >
         </div>
         <div class="form__box">
           <label class="label" for="__blank"></label>
